second pass of review